--- a/build.gradle
+++ b/build.gradle
@@ -4,23 +4,21 @@ buildscript {
         maven { url = 'https://maven.minecraftforge.net' }
         mavenCentral()
         jcenter()
-        maven {url='https://repo.spongepowered.org/repository/maven-public/'}
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.1.+', changing: true
-        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
+apply from: 'https://raw.githubusercontent.com/SizableShrimp/Forge-Class-Remapper/main/classremapper.gradle'
 
 version = "${mod_version}"
 group = "commoble.${modid}"
 archivesBaseName = "${modid}-${mc_version}"
 
-java.toolchain.languageVersion = JavaLanguageVersion.of(8) // Mojang ships Java 8 to end users, so your mod should target Java 8.
-println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
+java.toolchain.languageVersion = JavaLanguageVersion.of(16)
 
 sourceSets
 {
@@ -100,7 +98,6 @@ jar {
             "Implementation-Version": "${version}",
             "Implementation-Vendor" :"Commoble",
             "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
-			//,"MixinConfigs": "${modid}.mixins.json"
         ])
     }
 }
@@ -119,6 +116,3 @@ publishing {
         }
     }
 }
-
-//apply plugin: 'org.spongepowered.mixin'
-//mixin { add sourceSets.main, "${modid}.refmap.json" }
